v5.3.4

  * adjusted define-union-language to allow the unioned languages to
    have overlapping non-terminals; in that case the productions are
    combined

v5.3.3

No changes

v5.3.2

  * added random-generation based on define-judgment-form
    (which allows Redex to more effectively generate things
     like well-typed terms)

  * removed the restriction on unquotes in define-judgment-form

  * added the option to use judgment-forms with only I mode
    positions in terms

  * added 'boolean' as a new pattern

  * define-relation now compiles to judgment-form
    (instead of a metafunction)
  
  * added show-derivations to visualize judgment form derivations
    	     
v5.3.1

  * added optional #:lang keyword to term

  * added the ability to name clauses to define-judgment-form

  * added judgment-form-cases

  * adjust define-judgment-form typesetting so that it uses
    the line breaks in a premise to determine how to line
    break the typeset version

v5.3

  * added the amb tutorial.

  * added define-union-language

  * added define-extended-judgment-form

  * extended render-* functions so they can produce PDF

v5.2.1

  * rewrote the internals of the pattern matcher to be more consistent
    (centralized more error checking, moving more of it to compile
    time, and various other internal cleanups).

  * improved the way caching works so it uses about 1/5th memory and
    speeds up the R6RS test suite by about a factor of 2.

  * added a number of optimizations to the pattern matcher that
    speed up the R6RS test suite by 50% or so and speed up a
    lambdaJS benchmark by about a factor of 25.

  * added support for side-conditions and where clauses to
    define-relation, also added support for side-conditions to
    define-judgment-form

  * added the List-machine benchmark (by Appel, Dockins & Leroy)

v5.2

  * added define-judgment-form form

  * added define-term form

  * added with-compound-rewriters form
